--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -8,8 +8,6 @@
       <th>Link</th>
       <th>IP</th>
       <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
@@ -20,9 +18,7 @@
         <td><%= request.desc %></td>
         <td><%= request.link %></td>
         <td><%= request.ip %></td>
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Remove', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
