--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Films</h1>
 
-<%= render partial: 'movies/grid', locals: {movies: @new, title: 'New Additions'} %>
+<%= render partial: 'movies/grid', locals: {movies: @new, title: 'New Additions', link: link_to('Browse All', movies_browse_path)} %>
 
 <div id="random">
   <%= render partial: 'movies/grid', locals: {movies: @random, title: 'Random Selection', link: link_to('Shuffle', movies_shuffle_path, remote: true)} %>
