--- a/app/views/movies/browse.html.erb
+++ b/app/views/movies/browse.html.erb
@@ -134,7 +134,7 @@
 <script>
 // load more when user hits bottom of page
 $(window).scroll(function () {
-    if ($(document).height() <= $(window).scrollTop() + $(window).height()) {
+    if ($(document).height() <= $(window).scrollTop() + $(window).height() + 150) {
         $("#load-more-link a").click();
     }
  });
