--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,9 @@
                 <% end %>
               </li>
               <% end %>
+
+              <li class="divider"></li>
+              <li><%# link_to "Music", music_path %></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
