--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
 
     </div>
     <div class="col-md-4">
-      <%= image_tag 'icon_2013.svg', width: '100%'  %>
+      <%= link_to image_tag('icon_2013.svg', width: '100%'), music_index_path  %>
 
       <h2>Music</h2>
       <%= form_tag('', role: 'search') do %>
