--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,1 @@
-<h1>About Caketop</h1>
-
-<img src='http://i.imgur.com/hlzHXE9.jpg' width="100%"></img>
-
-<p>Caketop will make your dreams come true.</p>
+<%= Setting.get(:about).content.html_safe %>
