--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,12 @@
 <div class="jumbotron" style="text-align:center;background-color:#fff">
-  <h1>Caketop Theater</h1>
+
+  <% if Setting.get(:banner).boolean %>
+    <div class="well">
+      <%= Setting.get(:banner).content.html_safe %>
+    </div>
+  <% end %>
+
+  <h1><%= Setting.get(:name).content %></h1>
   <p>Chose your adventure...</p>
   <div class="row">
     <div class="col-md-4">
