--- a/app/views/home/settings.js.erb
+++ b/app/views/home/settings.js.erb
@@ -1,2 +1,3 @@
-$('.close').click();
-$('#<%= params[:setting] %>').prepend('<div class="alert alert-success alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><strong>Success!</strong> New setting saved.</div>');
+$('span#<%= params[:setting] %>').show();
+$('span#<%= params[:setting] %>').html('Saved...');
+$('span#<%= params[:setting] %>').fadeOut(1000);
