--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,10 +62,11 @@
   </div>
 
   <div id="footer">
-    <p style="padding:0px 10px 10px 0px;">Not affiliated with Westmont College. <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <a href="#" data-toggle="modal" data-target="#request-modal">Request</a>. <%= link_to "About", about_path %>.</p>
+    <p style="padding:0px 10px 10px 0px;">Not affiliated with Westmont College. <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <a href="#" data-toggle="modal" data-target="#request-modal">Request</a>. <a href="#" data-toggle="modal" data-target="#feedback-modal">Feedback</a>. <%= link_to "About", about_path %>.</p>
   </div>
 
   <%= render partial: 'requests/modal' %>
+  <%= render partial: 'feedbacks/modal' %>
 
 </body>
 </html>
