--- a/app/views/movies/_grid.html.erb
+++ b/app/views/movies/_grid.html.erb
@@ -2,6 +2,7 @@
   <div class="col-md-12">
     <% unless !defined?(notitle).nil? && notitle %>
     <legend><%= title %> 
+      <span class="sublegend"><%= sublegend unless defined?(sublegend).nil? %></span>
       <span class="pull-right"><%= link unless defined?(link).nil? %></span>
     </legend>
     <% end %>
