--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -10,12 +10,21 @@
   text-align:center;
 }
 
+.active {
+  background-color: #d2d2d2;
+}
+
+.song-cell {
+  height:260px;
+  overflow-y:scroll;
+}
+
 .music-thumb {
   margin-bottom:10px;
   padding-bottom:0px;
   padding-left:0px;
   padding-right:0px;
-  width: 16%;
+  width: 100%%;
 
 }
 
