--- a/app/views/music/_album.html.erb
+++ b/app/views/music/_album.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-8 song-cell">
   <ul id="playlist">
     <% album.songs.each do |song| %>
-      <li><%= link_to_function song.title, "changeSong(this, '#{song.filepath}')" %></li>
+      <li><%= link_to_function song.title, "changeSong(this, \"#{song.filename}\")" %></li>
     <% end %>
   </ul>
 </div>
