--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -96,4 +96,26 @@ body {
 
 .setting {
   padding-bottom:20px;
+
+.artist-image {
+  width:100%;
+  height:200px;
+  background:url(http://placehold.it/300x150);
+  background-size:cover;
+  background-position:center;
+  margin-bottom:20px;
+  padding-top:5px;
+  padding-left:8px;
+  padding-right:18px;
+  cursor: pointer;
+  color:white;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+  font-size:16px;
+}
+.artist-image:hover {
+  box-shadow:0px 0px 10px #666;
 }
