--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -14,20 +14,6 @@
   background-color: #d2d2d2;
 }
 
-.song-cell {
-  height:260px;
-  overflow-y:scroll;
-}
-
-.music-thumb {
-  margin-bottom:10px;
-  padding-bottom:0px;
-  padding-left:0px;
-  padding-right:0px;
-  width: 100%%;
-
-}
-
 .movie-thumb {
   margin-bottom:10px;
   padding-bottom:0px;
@@ -99,8 +85,8 @@ body {
   width:100%;
   height:200px;
   background:url(http://placehold.it/300x150);
-  background-size:cover;
-  background-position:center;
+  background-size:contain !important;
+  background-position:center !important;
   margin-bottom:20px;
   padding-top:5px;
   padding-left:8px;
@@ -116,4 +102,31 @@ body {
 }
 .artist-image:hover {
   box-shadow:0px 0px 10px #666;
+}
+
+.album-image {
+  width:100%;
+  height:265px;
+  background:url(http://placehold.it/300x300);
+  background-size:contain !important;
+  background-position:center !important;
+  margin-bottom:20px;
+  padding-top:5px;
+  padding-left:8px;
+  padding-right:18px;
+  cursor: pointer;
+  color:white;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+  font-size:16px;
+}
+.album-image:hover {
+  box-shadow:0px 0px 10px #666;
+}
+
+a {
+  cursor: pointer;
 }
