--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-md-3">
     <h1> <%= link_to "Music", music_index_path, remote: true %> </h1>
+    <%= form_tag '/music', method: :get, remote: true do %>
+      <input type="text" class="form-control" placeholder="Filter Artists" name="artist">
+    <% end %>
   </div>
   <div class="col-md-9">
     <div style="height:20px"></div>
@@ -10,38 +13,84 @@
         <li><a href="#" id="play-pause" class="pause"><span id="play-pause-span" class="glyphicon glyphicon-pause"></span></a></li>
         <li><a href="#" id="forward"><span class="glyphicon glyphicon-step-forward"></span></a></li>
         <li><a id="now-playing">Nothing playing yet...</a></li>
-        <li><audio id="nav-audio-controls">
-          <source src="" id="nav-audio-source">
-          </audio>
+        <li>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right" style="padding-right:10px;">
         <li><a href="#" onClick="$('#playlist-div').toggle()">Playlist</a></li>
       </ul>
     </nav>
-  </div>
-</div>
-
-<div id="playlist-div" style="display:none;">
+    <div id="playlist-div" style="display:none;" class="well">
   <legend>Playlist</legend>
   <ul id="playlist">
   </ul>
+<audio autoplay="autoplay" id="nav-audio-controls">  
+  <source src="" id="nav-audio-source">
+
+</audio> 
 </div>
+  </div>
+</div>
+
+
 
 <div id="content">
   <%= render partial: @partial %>
 </div>
 
 <script>
-  init();
-  function init(){
+  var playing = false;
+
+  function start_playing() {
+    playing = true;
+    $('#playlist li a').click();
+  }
+
+  function play(elem) {
+    $('.active').removeClass('active');
+    set_song($(elem).attr('filename'));
+    $(elem).addClass('active');
+    $('#now-playing').html($(elem).attr('title') + ' - ' + $(elem).attr('artist'));
+  }
+
+  function next() {
+    console.log($('.active').html())
+    $('.active').parent().next().find('a').click();
+  }
+
+  function last() {
+    console.log($('.active').html())
+    $('.active').parent().prev().find('a').click();
+  }
+
+  function set_song(filename) {
+    $('#nav-audio-source').attr('src', '/' + filename);
+    var player = document.getElementById("nav-audio-controls");
+    player.load();
+    player.play();
+  }
+
+  function add(elem) {
+    li = build_pl_item(
+      $(elem).attr('artist'),
+      $(elem).attr('album'),
+      $(elem).attr('title'),
+      $(elem).attr('filename')
+      );
+    $('#playlist').append(li);
+
+    if (!playing) { start_playing(); }
+  }
+
+  function build_pl_item(artist, album, title, filename) {
+    return '<li><a href="#" onClick="play(this)" class="playlist-elem" artist="' + artist + '" album="' + album + '" title="' + title + '" filename="' + filename + '">' + artist + " - " + title + "</a></li>";
+  }
 
   $('#nav-audio-controls')[0].addEventListener('ended',function(e){
     next();
   });
-  $('#back')[0].onclick = function(){
-    prev();
-  }
+  $('#forward').click(next);
+  $('#back').click(last);
   $("#play-pause")[0].onclick = function(){
     if ($("#play-pause-span").hasClass("glyphicon-play")) {
       $("#play-pause-span").addClass("glyphicon-pause").removeClass("glyphicon-play");
@@ -51,26 +100,6 @@
       document.getElementById("nav-audio-controls").pause();
     }
   }
-  $('#forward')[0].onclick = function(){
-    next();
-  }
-  }
-
-  function next() {
-    $('.active').next().find('a').click();
-  }
-  function prev() {
-    $('.active').prev().find('a').click();
-  }
-
-  function changeSong(elem, fp) {
-    document.getElementById("nav-audio-source").src=fp;
-    var player = document.getElementById("nav-audio-controls");
-    player.load();
-    player.play();
-    $(elem).parent().addClass('active').siblings().removeClass('active');
-  }
-
 
   // load more when user hits bottom of page
 $(window).scroll(function () {
