--- a/app/views/music/_artist_page.html.erb
+++ b/app/views/music/_artist_page.html.erb
@@ -35,11 +35,11 @@
   <div class="row">
     <% album_slice.each do |album| %>
       <div class="col-md-3">
-        <div class='album-image' style='<%= "background:url(/#{URI::encode(album.art)})" unless album.art.blank? %>;background-size: 100%;' onClick='$(this).parent().find("#tracks").toggle();'>
+        <div class='album-image' style='<%= "background:url(#{URI::encode(album.art)})" unless album.art.blank? %>;background-size: 100%;' onClick='$(this).parent().find("#tracks").toggle();'>
           <%= album.name %>
         </div>
         <div id="tracks" style="display:none;">
-          <a href="#albums">Play All</a>
+          <a onClick="add_all(this)">Play All</a>
           <ul>
             <% album.songs.order('track asc').each do |s| %>
               <li><a filename="<%= s.filename %>" artist="<%= s.album.artist.name %>" album="<%= s.album.name %>" title="<%= s.title %>" onClick="add(this)"><%= s.track %>: <%= s.title %></a></li>
