--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-3">
     <h1> <%= link_to "Music", music_index_path, remote: true %> </h1>
-    <%= form_tag '/music', method: :get, remote: true do %>
+    <%= form_tag music_index_path, method: :get, remote: true do %>
       <input type="text" class="form-control" placeholder="Filter Artists" name="artist">
     <% end %>
   </div>
@@ -64,7 +64,7 @@
   }
 
   function set_song(filename) {
-    $('#nav-audio-source').attr('src', '/' + filename);
+    $('#nav-audio-source').attr('src', '/dev-theater/' + filename);
     var player = document.getElementById("nav-audio-controls");
     player.load();
     player.play();
