--- a/app/views/music/_artist_page.html.erb
+++ b/app/views/music/_artist_page.html.erb
@@ -39,8 +39,8 @@
           <%= album.name %>
         </div>
         <div id="tracks" style="display:none;">
-          <a onClick="add_all(this)">Play All</a>
-          <ul>
+          <ul class='tracklist'>
+            <li><a onClick="add_all(this)">Play All</a></li>
             <% album.songs.order('track asc').each do |s| %>
               <li><a filename="<%= s.filename %>" artist="<%= s.album.artist.name %>" album="<%= s.album.name %>" title="<%= s.title %>" onClick="add(this)"><%= s.track %>: <%= s.title %></a></li>
             <% end %>
