--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -11,7 +11,8 @@
 }
 
 .active {
-  background-color: #d2d2d2;
+  font-weight:bold;
+  /*background-color: #d2d2d2;*/
 }
 
 .movie-thumb {
@@ -131,4 +132,18 @@ body {
 
 a {
   cursor: pointer;
+}
+
+.tracklist {
+  list-style-type: none;
+  padding:0px;
+}
+.tracklist li {
+
+}
+.tracklist li:hover {
+  background-color:#ddd;
+}
+.tracklist li a:hover {
+  text-decoration:none;
 }
