--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
               <% end %>
 
               <li class="divider"></li>
-              <li><%# link_to "Music", music_path %></li>
+              <li><%= link_to "Music", music_index_path %></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
