pop that stash only got 10 commits in my pocket

--- a/app/views/home/settings.html.erb
+++ b/app/views/home/settings.html.erb
@@ -97,8 +97,15 @@
     </div>
 
   </div>
+  <table class="table">
+    <tr>
+      <th>Name</th><th>text</th>
+    </tr>
+    <% @pages.each do |page| %>
+      <tr>
+        <td><%= page.name %></td>
+        <td><%= page.text %></td>
+      </tr>
+    <% end %>
+  </table>
 </div>
-
-
-
-
