add edit path for easy testing.

--- a/app/views/home/settings.html.erb
+++ b/app/views/home/settings.html.erb
@@ -103,8 +103,8 @@
     </tr>
     <% @pages.each do |page| %>
       <tr>
-        <td><%= link_to page.name, page_show_path(id: page.id) %></td>
-        <td><%= page.text %></td>
+        <td><%= link_to page.name, page_path(id: page.id) %></td>
+        <td><%= page.text %> <%= link_to 'Edit', edit_page_path(id: page.id) %></td>
       </tr>
     <% end %>
   </table>
