--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              
+
 
               <li><%= link_to "Home", '/theater' %></li>
 
@@ -57,6 +57,8 @@
 
               <li class="divider"></li>
               <li><%= link_to "Music", music_index_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Books", books_path %></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
