--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,4 +45,19 @@
       <% end %>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <%= link_to image_tag('icon_book.svg', width: '100%'), books_path  %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <h2>Books</h2>
+      <%= form_tag('', role: 'search') do %>
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search Music" name="q" disabled>
+      </div>
+      <% end %>
+    </div>
+  </div>
 </div>
