--- a/app/views/home/settings.html.erb
+++ b/app/views/home/settings.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1><%= @greeting %></h1>
   <p>Take me to my movies!</p>
-  <%= button_to 'Okay', 'theater', class: 'btn btn-primary btn-lg' %>
+  <%= button_to 'Okay', root_url, class: 'btn btn-primary btn-lg' %>
 </div>
 
 <div class="row">
