make settings jumbotron depend on first time

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
   </div>
 
   <div id="footer">
-    <p style="padding:0px 10px 10px 0px;">Not affiliated with Westmont College. <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <a href="#" data-toggle="modal" data-target="#request-modal">Request</a>. <%= link_to "About", about_path %>.</p>
+    <p style="padding:0px 10px 10px 0px;">Not affiliated with Westmont College. <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <a href="#" data-toggle="modal" data-target="#request-modal">Request</a>. <%= link_to "About", about_path %>. <%= link_to "Settings", settings_path %>.</p>
   </div>
 
   <%= render partial: 'requests/modal' %>
