--- a/app/views/home/settings.html.erb
+++ b/app/views/home/settings.html.erb
@@ -1,10 +1,13 @@
-<div class="jumbotron">
-  <h1><%= @greeting %></h1>
-  <p>Take me to my movies!</p>
-  <%= button_to 'Okay', root_url, class: 'btn btn-primary btn-lg' %>
-</div>
+<% if params[:first_time] == 'true' %>
+  <div class="jumbotron">
+    <h1>Welcome to Caketop!</h1>
+    <p>Your settings have been populated with defaults, if you want to change anything now is the time!</p>
+    <%= button_to "I don't care, show me the movies!", root_url, class: 'btn btn-primary btn-lg' %>
+  </div>
+<% end %>
 
 <div class="row">
+  <h1>Settings</h1>
   <div class="col-md-6">
 
     <legend>Site Name</legend>
