--- a/app/views/home/settings.html.erb
+++ b/app/views/home/settings.html.erb
@@ -105,3 +105,26 @@
 
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-6">
+    <legend>Footer Text</legend>
+    <%= form_tag settings_path, remote: true do %>
+      <%= hidden_field_tag :setting, :footer %>
+      <div class="row">
+        <div class="col-md-9">
+          <%= text_area_tag :footer_text, @footer.content, class: 'form-control', placeholder: "Welcome to Caketop Theater!" %>
+          <table class="table">
+            <tr>
+              <td><label><%= radio_button_tag :footer_display, true, @footer.boolean %> Show</label></td>
+              <td><label><%= radio_button_tag :footer_display, false, !@footer.boolean %> Hide</label></td>
+            </tr>
+          </table>
+        </div>
+        <div class="col-md-3">
+          <%= submit_tag "Save", class: 'btn btn-success', remote: true %> <span id="footer"></span>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
